# venom

./: .gitmodules  CMakeLists.txt  README.md
benchmark/: run_ablation1.sh  run_ablation2.sh  run_baseline_a.sh  run_baseline_b.sh  run_spmm_spatha.sh
end2end/: bert_pytorch.py  energy.py  gpt2_pytorch.py  gpt3_pytorch.py  install.sh  run_inference.sh  run_inference_profile.sh  setup.py
end2end/spatha_mod/block_sparse/: CMakeLists.txt
end2end/spatha_mod/block_sparse/spmm/: blockwise_library.cu
include/spatha/block_sparse/common/: epilogue.h  epilogue_32b.h
include/spatha/block_sparse/spmm/: blockwise_kernel.h  blockwise_kernel_32b.h  blockwise_kernel_baseline.h  blockwise_kernel_baseline_32b.h  blockwise_kernel_ideal.h
plot/: energy.py  run_ablation1.py  run_ablation2.py  run_baseline_a.py  run_baseline_b.py  run_inference.py  run_inference_profile.py  run_spmm_spatha.py
sparseml/: README.md  sparseml.sh
sparseml/integrations/huggingface-transformers/recipes/recipes/: oBERT_nm_gradual.yaml  oBERT_nmv_gradual.yaml  obs_nm_gradual_pair.yaml  oneshot_oBERT_nm.yaml  oneshot_oBERT_nmv.yaml
sparseml/integrations/huggingface-transformers/scripts/scripts/: 30epochs_gradual_pruning_squad_block8.sh  30epochs_gradual_pruning_squad_block8_875.sh  oBERTnm_squad.sh  oBERTnm_squad_gradual.sh  oBERTnmv_squad.sh  oBERTnmv_squad_gradual.sh  obsnm_squad_gradual_pair.sh  obsnmv_squad_gradual_pair.sh
sparseml/sparseml/pytorch/sparsification/pruning/: modifier_pruning_nm_pairwise_obs.py  modifier_pruning_nm_pairwise_obs_v.py  modifier_pruning_obs_nm.py  modifier_pruning_obs_nm_gradual.py  modifier_pruning_obs_nmv_gradual.py
sparseml/sparseml/utils/: helpers.py
src/: CMakeLists.txt  benchmark_spmm.cpp
src/format/: CMakeLists.txt  format_sr_nm.cpp  format_sr_nm.hpp
src/gemm/: cublasLt_gemm.cpp  cublasLt_gemm.hpp  cublas_gemm.cpp  cublas_gemm.hpp  gemm.cpp  gemm.hpp
src/spmm/: CMakeLists.txt  cusparseLt_spmm.cpp  spatha_spmm.cpp  spmm.hpp  sputnik_spmm.cpp
src/util/: argparse.h
